test_regress/t/t_array_method.out
%Error: t/t_array_method.v:83:17: 'with' not legal on this method
                                : ... In instance t
   83 |       i = q.sum with (item + 1); do if ((i) !== (32'h11)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",83, (i), (32'h11)); $stop; end while(0);;
      |                 ^~~~
%Error: t/t_array_method.v:85:21: 'with' not legal on this method
                                : ... In instance t
   85 |       i = q.product with (item + 1); do if ((i) !== (32'h168)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",85, (i), (32'h168)); $stop; end while(0);;
      |                     ^~~~
%Error: t/t_array_method.v:89:17: 'with' not legal on this method
                                : ... In instance t
   89 |       i = q.and with (item + 1); do if ((i) !== (32'b1001)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",89, (i), (32'b1001)); $stop; end while(0);;
      |                 ^~~~
%Error: t/t_array_method.v:91:16: 'with' not legal on this method
                                : ... In instance t
   91 |       i = q.or with (item + 1); do if ((i) !== (32'b1111)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",91, (i), (32'b1111)); $stop; end while(0);;
      |                ^~~~
%Error: t/t_array_method.v:93:17: 'with' not legal on this method
                                : ... In instance t
   93 |       i = q.xor with (item + 1); do if ((i) !== (32'hb)) begin $write("%%Error: %s:%0d:  got='h%x exp='h%x\n", "t/t_array_method.v",93, (i), (32'hb)); $stop; end while(0);;
      |                 ^~~~
%Error: Exiting due to
